fix spacing issues
fixed spacing issues

--- a/scss/ds-42.css
+++ b/scss/ds-42.css
@@ -54,7 +54,7 @@ body {
 }
 
 #ds42-nav ul li a:hover {
-  color: #008BAA;
+  color: white;
   text-decoration: underline;
   background-color: #008bAA;
   -webkit-transition: background-color text-decoration .3s ease-in-out;
